--- a/app/src/main/res/layout/fragment_mymenu.xml
+++ b/app/src/main/res/layout/fragment_mymenu.xml
@@ -1,49 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Mymenu"
+    tools:context=".MainActivity"
     android:orientation="vertical">
-
-    <!-- TODO: Update blank fragment layout -->
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="0.3">
+        android:layout_weight="0.01"
+        android:gravity="center" >
+
+        <TextView
+            android:id="@+id/mymenu"
+            android:text="마이 메뉴"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="30dp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.3" >
+            <TextView
+                android:id="@+id/today"
+                android:text="오늘 걸음"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="20dp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.5"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/weekly"
+                android:text="주간 걸음"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="20dp" />
 
 
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" >
 
-
-
-
+        </LinearLayout>
 
     </LinearLayout>
 
-
-    <LinearLayout>
-
-
-        <LinearLayout>
-
-
-        </LinearLayout>
-
-
-        <LinearLayout>
-
-
-        </LinearLayout>
-
-
-        <LinearLayout>
-
-
-        </LinearLayout>
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.15">
 
     </LinearLayout>
-
 
 </LinearLayout>
